<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        />
    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/farm_image"
        app:layout_constraintDimensionRatio="V,1:1"
        android:src="@drawable/kisan_seva"
       app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPhNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toStartOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtUser"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/farmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farmer"
            android:checked="true"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/trader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trader" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <TextView
        android:id="@+id/txtState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLocation"
        />
    <TextView
        android:id="@+id/txtDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/district"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/spDistrict"
        app:layout_constraintTop_toBottomOf="@id/txtLocation"
        />
    <TextView
        android:id="@+id/txtTaluka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taluka"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/spTaluka"
        app:layout_constraintTop_toBottomOf="@id/spState"
        />
    <TextView
        android:id="@+id/txtVillage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/village"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/spVillage"
        app:layout_constraintTop_toBottomOf="@id/spDistrict"
        />

    <Spinner
        android:id="@+id/spState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:gravity="start"
        android:background="@drawable/spinner_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtState" />

    <Spinner
        android:id="@+id/spDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:gravity="start"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spState"
        app:layout_constraintTop_toBottomOf="@id/txtState" />

    <Spinner
        android:id="@+id/spTaluka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:gravity="start"
        android:background="@drawable/spinner_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTaluka" />

    <Spinner
        android:id="@+id/spVillage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spTaluka"
        app:layout_constraintTop_toBottomOf="@id/txtVillage" />

    <Button
        android:id="@+id/btnComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>